# cv_bookclub

notes/: sesh2.txt
src/: CMakeLists.txt  histogram_equalization.cc  manual_filter.cc  pixel_transforms.cc  standard_filters.cc
